--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-19.54MB/s(Youtube:不良林), server: jp5.mayiyun.shop, port: 10014, type: ss, cipher: chacha20-ietf-poly1305, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
-  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇭🇰 香港-2.18MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-3.83MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇸🇬 新加坡-3.07MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.43MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇭🇰 香港-2.55MB/s(Youtube:不良林), server: 103.195.4.36, port: 443, type: trojan, password: 563b47e2-1773-40fd-8d93-7d1b22cd20fd, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-7.26MB/s(Youtube:不良林), server: 146.56.96.252, port: 2333, type: ssr, cipher: aes-256-cfb, password: doub.io, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
@@ -66,7 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
