--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-3.83MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇸🇬 新加坡-3.07MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.43MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.55MB/s(Youtube:不良林), server: 103.195.4.36, port: 443, type: trojan, password: 563b47e2-1773-40fd-8d93-7d1b22cd20fd, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-7.26MB/s(Youtube:不良林), server: 146.56.96.252, port: 2333, type: ssr, cipher: aes-256-cfb, password: doub.io, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-429.2KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-414.0KB/s(Youtube:不良林), server: zh01lv5ca03.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-12.55MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-3.05MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇰🇷 韩国-302.5KB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 5.181.234.254, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-302.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
