--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-224.4KB/s(Youtube:不良林), server: 172.99.190.87, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: 43.154.93.14, port: 443, type: vmess, uuid: afe936ee-536e-4e94-8c46-71d222183729, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /vNz3qzS3ml, ws-headers: {Host: 43.154.93.14}}
-  - {name: 🇬🇧 英国-279.1KB/s(Youtube:不良林), server: 172.99.190.87, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-158.7KB/s(Youtube:不良林), server: zh01lv5uk03.feiguayun.xyz, port: 35087, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
-  - {name: 🇩🇪 德国-263.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-5.11MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-386.7KB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇫🇷 法国-499.5KB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇫🇷 法国-287.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇯🇵 日本-1.85MB/s(Youtube:不良林), server: www.fewa.cf, port: 443, type: vmess, uuid: 9fcf1e10-772c-ce80-d51f-62c708333c50, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /paths/, ws-headers: {Host: www.fewa.cf}}
+  - {name: 🇨🇳 中国-223.2KB/s(Youtube:不良林), server: zh01lv5ca01.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
+  - {name: 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-224.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-279.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-263.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-386.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-499.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-287.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
